<resources>
    <string name="app_name">MoonWayGravity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="customer_support">Customer Support</string>
    <string name="payment">Payment</string>
    <string name="parking_information">Parking Information</string>
    <string name="user_profile">User Profile</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="your_name">Your Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="addVehicle">Add New Vehicle</string>


    <string name="activeState">active</string>
    <string name="closeState">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_plate_number">Enter Plate Number</string>
    <string name="your_vehicle">Your Vehicle :</string>
    <string name="customer_portal">Customer Portal</string>
    <string name="view_available_parking">View Available Parking</string>
    <string name="available_parking_slot">Available Parking slot</string>
    <string name="floor">Floor</string>
    <string name="slot_vertical">SlotVertical</string>
    <string name="annoucement">Annoucement </string>
    <string name="user_profile1">Your Profile</string>
</resources>
