<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UserProfileFragment"
    android:background="@color/grey">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/layout1"
        android:background="@color/color_primary">
        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome,"
            style="?materialButtonOutlinedStyle"
            android:textColor="@color/white"
            android:textSize="30dp"/>
        <TextView
            android:layout_below="@+id/welcomeLabel"
            android:id="@+id/nameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:layout_centerHorizontal="true"
            style="?materialButtonOutlinedStyle"
            android:textColor="@color/white"
            android:textSize="50dp"/>


    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:id="@+id/layout2"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account Balance"
            android:drawableLeft="@drawable/wallet"
            android:padding="5dp"
            android:drawablePadding="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textAppearance="?textAppearanceBody1"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">
        <com.google.android.material.button.MaterialButton
            style="?materialButtonOutlinedStyle"
            android:id="@+id/topup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Top Up"
            android:layout_marginEnd="15dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:icon="@drawable/reload"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            />
        </RelativeLayout>
    </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout2"
                android:layout_marginTop="10dp"
                android:background="@color/white"
               android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_vehicle"
                    android:layout_marginLeft="10dp"
                    android:textSize="14dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:layout_marginLeft="20dp"
                        style="?materialButtonOutlinedStyle"
                        android:id="@+id/addNewVehicle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/add_car_16"
                        app:iconTint="@null"
                        app:iconSize="60px"
                        android:text="@string/addVehicle">

                    </com.google.android.material.button.MaterialButton>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/vehicleList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    tools:listitem="@layout/vehicle_list_layout"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>